## main.py

from sql_injection import SQLInjection
from xss_exploit import XSSExploit
from auth_bypass import AuthBypass
from report_generator import ReportGenerator

class Main:
    """
    Main class orchestrates the testing of various security vulnerabilities and generates a report.
    """

    def run(self) -> None:
        """
        Orchestrates the testing of SQL injection, XSS, and authentication bypass vulnerabilities,
        and generates a report based on the findings.
        """
        target_url = "http://localhost:9090"  # Default target URL for testing

        # Initialize vulnerability testing classes
        sql_injection_tester = SQLInjection()
        xss_exploit_tester = XSSExploit()
        auth_bypass_tester = AuthBypass()

        # List to collect all findings
        all_findings = []

        # Test SQL Injection
        sql_findings = sql_injection_tester.test_injection(target_url)
        all_findings.append(sql_findings)

        # Test XSS
        xss_findings = xss_exploit_tester.test_xss(target_url)
        all_findings.append(xss_findings)

        # Test Authentication Bypass
        auth_findings = auth_bypass_tester.test_auth(target_url)
        all_findings.append(auth_findings)

        # Generate report
        report_generator = ReportGenerator()
        report_generator.generate_report(all_findings)

if __name__ == "__main__":
    main_instance = Main()
    main_instance.run()
