
classDiagram
    class Main {
        +main() str
    }
    class Exploits {
        +sql_injection(url: str) bool
        +xss_attack(url: str) bool
        +directory_traversal(url: str) bool
    }
    class Reporter {
        -findings list
        +log_vulnerability(vuln_type: str, url: str, success: bool)
        +generate_report() str
    }
    Main --> Exploits
    Main --> Reporter
